added biometric token
